# libft_based_template

./: .gitignore  CMakeLists.txt  Makefile  README.md
sources/: main.c
